Fix unintended horizontal scrolling in Chrome on Mac

--- a/app/assets/stylesheets/dy7/_desktop.less
+++ b/app/assets/stylesheets/dy7/_desktop.less
@@ -41,7 +41,9 @@ body, html {
   height: auto !important;
   height: 100%;
   margin: 0 0 -@footer-height 0;
-  padding: 160px 0 @footer-height 0
+  overflow-x: hidden;
+  padding: 160px 0 @footer-height 0;
+  width: 100%;
 }
 /*div*/.dy7-main-container {
   margin: 0 auto 30px;
